--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     #map {
-      height: 600px;
+      height: 80vh;
       width: 100%;
     }
   </style>
@@ -364,6 +364,7 @@ radio35.bindPopup("<b>San Isidro</b><br>Humedad(min-max): (25%-57%)</b><br>Densi
 
 </body>
 </html>
+
 
 
 
