--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       height: 80vh;
       width: 100%;
     }
+     /* Media query para pantallas grandes */
+  @media (min-width: 1600px) {
+    #map {
+      height: 90vh; /* aumenta la altura en pantallas muy grandes */
+    }
+  }
   </style>
 </head>
 <body>
@@ -364,6 +370,7 @@ radio35.bindPopup("<b>San Isidro</b><br>Humedad(min-max): (25%-57%)</b><br>Densi
 
 </body>
 </html>
+
 
 
 
