--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ radio33.bindPopup("<b>El Tejar</b><br>Humedad(min-max): (24%-60%)</b><br>Densida
 var coords35 = convertirUTM(504862.9, 1086640.4);
 var radio35= L.circle(coords35, {
   radius: 500, 
-  color: 'white',
+  color: 'black',
   fillColor: 'black',
   fillOpacity: 0.25
 }).addTo(map);
@@ -370,6 +370,7 @@ radio35.bindPopup("<b>San Isidro</b><br>Humedad(min-max): (25%-57%)</b><br>Densi
 
 </body>
 </html>
+
 
 
 
