--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@ radio33.bindPopup("<b>El Tejar</b><br>Humedad(min-max): (24%-60%)</b><br>Densida
 var coords35 = convertirUTM(504862.9, 1086640.4);
 var radio35= L.circle(coords35, {
   radius: 500, 
-  color: 'black',
-  fillColor: 'black',
+  color: 'white',
+  fillColor: 'white',
   fillOpacity: 0.25
 }).addTo(map);
 radio35.bindPopup("<b>San Isidro</b><br>Humedad(min-max): (25%-57%)</b><br>Densidad: 1,70 Ton/m<sup>3</sup>-2,1Ton/m<sup>3</sup></b><br>Capacidad de soporte admisible(FS=3): 4Ton/m<sup>2</sup> - 20 Ton/m<sup>2</sup></b><br> Profundidad: 15 m </b><br> Clasificación: Arcilla de alta plasticidad");
@@ -370,6 +370,7 @@ radio35.bindPopup("<b>San Isidro</b><br>Humedad(min-max): (25%-57%)</b><br>Densi
 
 </body>
 </html>
+
 
 
 
