--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       fillColor: 'white',
       fillOpacity: 0.25
     }).addTo(map);
-    radio30.bindPopup("<b>Oreamuno</b><br>Humedad(min-max): (40%-70%)</b><br>Densidad total (min-max): ( 1,605Ton/m<sup>3</sup>-1,725 Ton/m<sup>3</sup>)</b><br>Capacidad de soporte admisible(min-max) (FS=3):(14 Ton/m<sup>2</sup>-19 Ton/m<sup>2</sup>)</b><br> Profundidad: 5m </b><br> Clasificación:Limo elástico arenoso ");
+    radio30.bindPopup("<b>Guarco</b><br>Humedad(min-max): (40%-70%)</b><br>Densidad total (min-max): ( 1,605Ton/m<sup>3</sup>-1,725 Ton/m<sup>3</sup>)</b><br>Capacidad de soporte admisible(min-max) (FS=3):(14 Ton/m<sup>2</sup>-19 Ton/m<sup>2</sup>)</b><br> Profundidad: 5m </b><br> Clasificación:Limo elástico arenoso ");
 
 // 🔹 Ejemplo 31: coordenadas Lat/Lon directas 073-2020
    var coords31 = convertirUTM(504862.14, 1090021.43);
@@ -370,6 +370,7 @@ radio35.bindPopup("<b>San Isidro</b><br>Humedad(min-max): (25%-57%)</b><br>Densi
 
 </body>
 </html>
+
 
 
 
