--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       fillColor: 'white',
       fillOpacity: 0.25
     }).addTo(map);
-    radio10.bindPopup("<b>Paso Ancho</b><br>Humedad(min-max): (40%-160%)</b><br>Densidad total (min-max): ( 0,96 Ton/m<sup>3</sup>-1,44 Ton/m<sup>3</sup>)</b><br>Capacidad de soporte admisible(min-max) (FS=3):(2 Ton/m<sup>2</sup>-12 Ton/m<sup>2</sup>)</b><br> Profundidad: 5m </b><br> Clasificación:Arena con finos</b><br> Nota: Había presencia de material orgánico de 0,0m-0,9m ");
+    radio10.bindPopup("<b>Oreamuno</b><br>Humedad(min-max): (40%-160%)</b><br>Densidad total (min-max): ( 0,96 Ton/m<sup>3</sup>-1,44 Ton/m<sup>3</sup>)</b><br>Capacidad de soporte admisible(min-max) (FS=3):(2 Ton/m<sup>2</sup>-12 Ton/m<sup>2</sup>)</b><br> Profundidad: 5m </b><br> Clasificación:Arena con finos</b><br> Nota: Había presencia de material orgánico de 0,0m-0,9m ");
 
     // 🔹 Ejemplo 11: coordenadas Lat/Lon directas 035-2024
    var coords11 = convertirUTM(506635.69, 1090237.13);
@@ -380,6 +380,7 @@ radio36.bindPopup("<b>Oreamuno</b><br>Humedad(min-max): (33%-90%)</b><br>Densida
 
 </body>
 </html>
+
 
 
 
