--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ var radio32 = L.circle(coords32, {
   fillColor: 'white',
   fillOpacity: 0.25
 }).addTo(map);
-radio32.bindPopup("<b>Oriental</b><br>Humedad(min-max): (17%-58%)</b><br>Densidad: 1,71Ton/m<sup>3</sup>- 1,77 Ton/m<sup>3</sup></b><br>Capacidad de soporte admisible(FS=3): 13 Ton/m<sup>2</sup> - 20 Ton/m<sup>2</sup></b><br> Profundidad: 4 m </b><br> Clasificación: Presencia de arcilla de alta plasticidad y limo de alta plasticidad");
+radio32.bindPopup("<b>Oriental</b><br>Humedad(min-max): (17%-58%)</b><br>Densidad: 1,71 Ton/m<sup>3</sup>- 1,77 Ton/m<sup>3</sup></b><br>Capacidad de soporte admisible(FS=3): 13 Ton/m<sup>2</sup> - 20 Ton/m<sup>2</sup></b><br> Profundidad: 4 m </b><br> Clasificación: Presencia de arcilla de alta plasticidad y limo de alta plasticidad");
 
 // 🔹 Ejemplo 34: Guarco 
 var coords34 = convertirUTM(499979.16, 1087847.575);
@@ -341,7 +341,7 @@ var radio34 = L.circle(coords34, {
   fillColor: 'white',
   fillOpacity: 0.25
 }).addTo(map);
-radio34.bindPopup("<b>Guarco</b><br>Humedad(min-max): (11%-24%)</b><br>Densidad(min-max): (1,70 - 1,96 Ton/m<sup>3</sup>)</b><br>Capacidad de soporte admisible(FS=3): 7 Ton/m<sup>2</sup> - 20 Ton/m<sup>2</sup></b><br> Profundidad: 3 m </b><br> Clasificación: Arcilla fina");
+radio34.bindPopup("<b>Guarco</b><br>Humedad(min-max): (11%-24%)</b><br>Densidad(min-max): (1,70 1,96 Ton/m<sup>3</sup> - 1,96 Ton/m<sup>3</sup>)</b><br>Capacidad de soporte admisible(FS=3): 7 Ton/m<sup>2</sup> - 20 Ton/m<sup>2</sup></b><br> Profundidad: 3 m </b><br> Clasificación: Arcilla fina");
 
 
 
@@ -380,6 +380,7 @@ radio36.bindPopup("<b>Oreamuno</b><br>Humedad(min-max): (33%-90%)</b><br>Densida
 
 </body>
 </html>
+
 
 
 
