--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       fillColor: 'white',
       fillOpacity: 0.25
     }).addTo(map);
-    radio22.bindPopup("<b>Birrisito</b><br>Humedad(min-max): (31%-58%)</b><br>Densidad total (min-max): (1,700 Ton/m<sup>3</sup>-1,765 Ton/m<sup>3</sup>)</b><br>>Capacidad de soporte admisible (FS=3):20 Ton/m<sup>2</sup></b><br> Profundidad: 5m </b><br> Clasificación:Presencia de arenas limosas y limos elásticos");
+    radio22.bindPopup("<b>Birrisito</b><br>Humedad(min-max): (31%-58%)</b><br>Densidad total (min-max): (1,700 Ton/m<sup>3</sup>-1,765 Ton/m<sup>3</sup>)</b><br>Capacidad de soporte admisible (FS=3):20 Ton/m<sup>2</sup></b><br> Profundidad: 5m </b><br> Clasificación:Presencia de arenas limosas y limos elásticos");
 
 
     // 🔹 Ejemplo 23: coordenadas Lat/Lon directas 103-2020
@@ -380,6 +380,7 @@ radio36.bindPopup("<b>Oreamuno</b><br>Humedad(min-max): (33%-90%)</b><br>Densida
 
 </body>
 </html>
+
 
 
 
